aws/k3s-terraform-cluster/pipelines-as-code/jenkins/templates/counter-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ${nameSpace}
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: "redis"
          ports:
            - name: tcp
              containerPort: 6379
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sleep", "30"]
            postStart:
              exec:
                command: ["/usr/local/bin/redis-cli", "set", "zone", "local"]
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ${nameSpace}
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${serviceName}-deployment
  namespace: ${nameSpace}
spec:
  selector:
    matchLabels:
      app: ${serviceName}
  replicas: 1
  template:
    metadata:
      labels:
        app: ${serviceName}
    spec:
      containers:
        - name: ${serviceName}
          image: ${imageName}:${imageTag}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ${serviceName}-service
  namespace: ${nameSpace}
spec:
  selector:
    app: ${serviceName}
  ports:
  - protocol: TCP
    appProtocol: http
    port: 80
