aws/k3s-terraform-cluster/pipelines-as-code/jenkins/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${serviceName}-ingress
  namespace: ${nameSpace}
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /${serviceName}
        pathType: Prefix
        backend:
          service:
            name: ${serviceName}-service
            port:
              number: 80
